# backend/docs/swagger.json
@@ -909,6 +909,12 @@
                 "priority"
             ],
             "properties": {
+                "callback_secret": {
+                    "type": "string"
+                },
+                "callback_url": {
+                    "type": "string"
+                },
                 "command_action_name": {
                     "type": "string"
                 },
@@ -1128,6 +1134,12 @@
         "github_com_MattBrs_OcelotMDM_internal_domain_command.Command": {
             "type": "object",
             "properties": {
+                "callbackSecret": {
+                    "type": "string"
+                },
+                "callbackURL": {
+                    "type": "string"
+                },
                 "commandActionName": {
                     "type": "string"
                 },
